[gd_scene load_steps=22 format=2]

[ext_resource path="res://BG Layers/bg3.png" type="Texture" id=1]
[ext_resource path="res://BG Layers/bg2.png" type="Texture" id=2]
[ext_resource path="res://BG Layers/bg1.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Redressed-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Select_level_1.gd" type="Script" id=5]
[ext_resource path="res://Select_level_2.gd" type="Script" id=6]
[ext_resource path="res://Select_level_3.gd" type="Script" id=7]
[ext_resource path="res://BackButton.gd" type="Script" id=8]
[ext_resource path="res://Select_level_5.gd" type="Script" id=9]
[ext_resource path="res://Select_level_4.gd" type="Script" id=10]
[ext_resource path="res://Select_level_6.gd" type="Script" id=11]
[ext_resource path="res://Select_level_10.gd" type="Script" id=12]
[ext_resource path="res://Select_level_7.gd" type="Script" id=13]
[ext_resource path="res://Select_level_8.gd" type="Script" id=14]
[ext_resource path="res://Select_level_9.gd" type="Script" id=15]
[ext_resource path="res://SelectLevels.gd" type="Script" id=16]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 21
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 21
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[node name="SelectLevel" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )

[node name="Bg1" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true

[node name="Bg2" type="Sprite" parent="Bg1"]
position = Vector2( 641, 309.5 )
scale = Vector2( 0.635, 0.709536 )
texture = ExtResource( 2 )

[node name="Bg3" type="Sprite" parent="Bg1/Bg2"]
position = Vector2( -7.87402, 9.16089 )
texture = ExtResource( 1 )

[node name="Button" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 38.0
margin_top = 540.0
margin_right = 99.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 1 )
text = "1"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 130.0
margin_top = 540.0
margin_right = 191.0
margin_bottom = 595.0
custom_fonts/font = SubResource( 2 )
text = "2"
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 227.0
margin_top = 541.0
margin_right = 288.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 3 )
text = "3"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 328.0
margin_top = 541.0
margin_right = 389.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "4"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 427.0
margin_top = 541.0
margin_right = 488.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "5"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 523.0
margin_top = 541.0
margin_right = 584.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "6"
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button7" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 619.0
margin_top = 541.0
margin_right = 680.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "7"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button8" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 715.0
margin_top = 541.0
margin_right = 776.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "8"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button9" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 811.0
margin_top = 541.0
margin_right = 872.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "9"
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button10" type="Button" parent="Bg1"]
pause_mode = 2
margin_left = 903.0
margin_top = 541.0
margin_right = 964.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 5 )
text = "10"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
pause_mode = 2
margin_left = 38.0
margin_top = 634.0
margin_right = 186.0
margin_bottom = 689.0
custom_fonts/font = SubResource( 4 )
text = "Back"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Bg1/Button" to="Bg1/Button" method="_on_Button_button_up"]
[connection signal="button_up" from="Bg1/Button2" to="Bg1/Button2" method="_on_Button2_button_up"]
[connection signal="button_up" from="Bg1/Button3" to="Bg1/Button3" method="_on_Button3_button_up"]
[connection signal="button_up" from="Bg1/Button4" to="Bg1/Button4" method="_on_Button4_button_up"]
[connection signal="button_up" from="Bg1/Button5" to="Bg1/Button5" method="_on_Button5_button_up"]
[connection signal="button_up" from="Bg1/Button6" to="Bg1/Button6" method="_on_Button6_button_up"]
[connection signal="button_up" from="Bg1/Button7" to="Bg1/Button7" method="_on_Button7_button_up"]
[connection signal="button_up" from="Bg1/Button8" to="Bg1/Button8" method="_on_Button8_button_up"]
[connection signal="button_up" from="Bg1/Button9" to="Bg1/Button9" method="_on_Button9_button_up"]
[connection signal="button_up" from="Bg1/Button10" to="Bg1/Button10" method="_on_Button10_button_up"]
[connection signal="button_up" from="BackButton" to="BackButton" method="_on_BackButton_button_up"]
